--- a/templates/author/index.html.twig
+++ b/templates/author/index.html.twig
@@ -3,18 +3,32 @@
 {% block title %}Hello AuthorController!{% endblock %}
 
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
+    <style>
+        .example-wrapper {
+            margin: 1em auto;
+            max-width: 800px;
+            width: 95%;
+            font: 18px/1.5 sans-serif;
+        }
+        .example-wrapper code {
+            background: #F5F5F5;
+            padding: 2px 6px;
+        }
+    </style>
 
-<div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
+    <div class="example-wrapper">
+        <h1>Hello {{ controller_name }}! ✅</h1>
 
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code>C:/Users/benre/Downloads/dummy/src/Controller/AuthorController.php</code></li>
-        <li>Your template at <code>C:/Users/benre/Downloads/dummy/templates/author/index.html.twig</code></li>
-    </ul>
-</div>
+        <p>This friendly message is coming from:</p>
+        <ul>
+            <li>Your controller at
+                <code>C:/Users/benre/Downloads/dummy/src/Controller/AuthorController.php</code>
+            </li>
+            <li>Your template at
+                <code>C:/Users/benre/Downloads/dummy/templates/author/index.html.twig</code>
+            </li>
+        </ul>
+
+        <a href="{{ path('ShowAll') }}">📚 Voir la liste des auteurs</a>
+    </div>
 {% endblock %}
